RESOLVED FIXED 192617
[Win][Clang][WebKitLegacy] warning: expected a qualified name after 'typename' of COMEnumVariant and COMPropertyBag
https://bugs.webkit.org/show_bug.cgi?id=192617
Summary [Win][Clang][WebKitLegacy] warning: expected a qualified name after 'typename...
Fujii Hironori
Reported 2018-12-11 23:48:13 PST
[Win][Clang][WebKitLegacy] warning: expected a qualified name after 'typename' of COMEnumVariant and COMPropertyBag clang-cl reports the following compilation warnings: > [5841/6308] Building CXX object Source\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebDatabaseManager.cpp.obj > In file included from ..\..\Source\WebKitLegacy\win\WebDatabaseManager.cpp:32: > ..\..\Source\WebKitLegacy\win/COMEnumVariant.h(72,25): warning: expected a qualified name after 'typename' > COMEnumVariant<typename ContainerType>* COMEnumVariant<ContainerType>::adopt(ContainerType& container) > ^ > ..\..\Source\WebKitLegacy\win/COMEnumVariant.h(82,25): warning: expected a qualified name after 'typename' > COMEnumVariant<typename ContainerType>* COMEnumVariant<ContainerType>::createInstance(const ContainerType& container) > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebDatabaseManager.cpp:33: > ..\..\Source\WebKitLegacy\win/COMPropertyBag.h(80,71): warning: expected a qualified name after 'typename' > COMPropertyBag<ValueType, KeyType, HashType>* COMPropertyBag<typename ValueType, typename KeyType, HashType>::createInstance(const HashMapType& hashMap) > ^ > ..\..\Source\WebKitLegacy\win/COMPropertyBag.h(80,91): warning: expected a qualified name after 'typename' > COMPropertyBag<ValueType, KeyType, HashType>* COMPropertyBag<typename ValueType, typename KeyType, HashType>::createInstance(const HashMapType& hashMap) > ^ > ..\..\Source\WebKitLegacy\win/COMPropertyBag.h(88,71): warning: expected a qualified name after 'typename' > COMPropertyBag<ValueType, KeyType, HashType>* COMPropertyBag<typename ValueType, typename KeyType, HashType>::adopt(HashMapType& hashMap) > ^ > ..\..\Source\WebKitLegacy\win/COMPropertyBag.h(88,91): warning: expected a qualified name after 'typename' > COMPropertyBag<ValueType, KeyType, HashType>* COMPropertyBag<typename ValueType, typename KeyType, HashType>::adopt(HashMapType& hashMap) > ^
Attachments
Patch (5.09 KB, patch)
2018-12-11 23:57 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-12-11 23:57:05 PST
Fujii Hironori
Comment 2 2018-12-12 00:17:40 PST
This patch fixes the following warning, too. > In file included from ..\..\Source\WebKitLegacy\win\WebCoreSupport\WebFrameLoaderClient.cpp:32: > ..\..\Source\WebKitLegacy\win\COMPropertyBag.h(140,5): warning: missing 'typename' prior to dependent type name 'HashMapType::const_iterator' [-Wtypename-missing] > HashMapType::const_iterator it = m_hashMap.find(String(pszPropName)); > ^~~~~~~~~~~~~~~~~~~~~~~~~~~ > typename > ..\..\Source\WebKitLegacy\win\COMPropertyBag.h(82,36): note: in instantiation of member function 'COMPropertyBag<WTF::String, WTF::String, WTF::StringHash>::COMPropertyBag' requested here > COMPropertyBag* instance = new COMPropertyBag(hashMap); > ^ > ..\..\Source\WebKitLegacy\win\WebCoreSupport\WebFrameLoaderClient.cpp(624,82): note: in instantiation of member function 'COMPropertyBag<WTF::String, WTF::String, WTF::StringHash>::createInstance' requested here > COMPtr<IPropertyBag> formValuesPropertyBag(AdoptCOM, COMPropertyBag<String>::createInstance(formValuesMap)); > ^
Ross Kirsling
Comment 3 2018-12-12 17:44:30 PST
LGTM.
Fujii Hironori
Comment 4 2018-12-12 22:59:58 PST
Radar WebKit Bug Importer
Comment 5 2018-12-12 23:01:35 PST
Note You need to log in before you can comment on or make changes to this bug.