[Win][Clang][WebKitLegacy] warning: expected a qualified name after 'typename' of COMEnumVariant and COMPropertyBag https://bugs.webkit.org/show_bug.cgi?id=192617

Reviewed by Alex Christensen.

* COMEnumVariant.h:
(COMEnumVariant<ContainerType>::adopt): Removed 'typename' from non dependent names.
(COMEnumVariant<ContainerType>::createInstance): Ditto.
(COMEnumVariant<ContainerType>::Next): Prepend 'typename' for dependent names.
* COMPropertyBag.h:
(HashType>::createInstance): Removed 'typename' from non dependent names.
(HashType>::adopt): Ditto.
(HashType>::Read): Replaced dependent name 'HashMapType::const_iterator' with 'auto'.
(HashType>::GetPropertyInfo): Ditto.

Canonical link: https://commits.webkit.org/207231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239152 268f45cc-cd09-0410-ab3c-d52691b4dbfc